[gd_scene load_steps=5 format=2]

[ext_resource path="res://Bullet.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.1
mid_height = 0.5

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0, 1, 1 )

[sub_resource type="CapsuleShape" id=3]
radius = 0.1
height = 0.5

[node name="Bullet" type="KinematicBody"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="BulletHitArea" type="Area" parent="."]
collision_layer = 32
collision_mask = 9

[node name="CollisionShape" type="CollisionShape" parent="BulletHitArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
shape = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="BulletHitArea" to="." method="_on_HitArea_area_entered"]
